src/test/deca/context/invalid/string-int-affectation.deca
// Description:
//    Affectation et typage (string - int)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 11 : The type "string" doesn't exist (rule 0.2)
//

{
   int a;
   string b;

   // Doit etre refuse.
   a = b;
}
